z-index fix and address search bar fix

--- a/src/components/dashboard/DashboardAddress.sass
+++ b/src/components/dashboard/DashboardAddress.sass
@@ -6,6 +6,7 @@
   display: flex
   align-items: center
   justify-content: center
+  z-index: 4
 
   .search-container
     width: 50%
@@ -24,8 +25,8 @@
       top: 40px
       left: 0
       right: 0
-      // border: 1px blue solid
       .suggestion-item
+        padding: 8px
         height: 40px
         display: flex
         align-items: center
